日付を取得できるように修正。

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>17-and-n</title>
+  <title>17y-plus</title>
 </head>
 <body>
   <h1>生年月日を入力してボタンを押してください。<br>
     年齢を「１７歳とNか月」に変換します。</h1>
   <input type="date" id="calendar" max="2100-12-31">
-  <button type="button" onclick="conv17N()">年齢をアレする</button>
+  <button type="button" onclick="conv17N()">年齢を17歳とする</button>
   <script type="text/javascript" src="conv17N.js"></script>
 </body>
 </html>
