input="date" の初期値を設定

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>生年月日を入力してボタンを押してください。<br>
     年齢を「１７歳とNか月」に変換します。</h1>
-  <input type="date" id="calendar" max="2100-12-31" min="1900-01-01">
+  <input type="date" id="calendar" value="1989-01-08" max="2100-12-31" min="1900-01-01">
   <button type="button" class="button" onclick="conv17N()">年齢を17歳にします</button>
   <p id="showDOB"></p>
   <p id="showdiffDate"></p>
