--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>生年月日を入力してボタンを押してください。<br>
     年齢を「１７歳とNか月」に変換します。</h1>
   <input type="date" id="calendar" value="1989-01-08" max="2100-12-31" min="1900-01-01">
-  <button type="button" class="button" onclick="conv17N()">年齢を17歳にします</button>
+  <button type="button" class="button" onclick="conv17N()">17歳になる</button>
   <p id="showDOB"></p>
   <p id="showdiffDate"></p>
   <p id="show17yNmonth"></p>
